--- a/_scss/defold.scss
+++ b/_scss/defold.scss
@@ -4699,7 +4699,16 @@ ul.page-checklist-negative li:before {
 		opacity: 1;
 	}
 
-	.discord-hub-hero .page-hero-graphic {
+	.asset-hub-hero.learn-catalog-hero .page-hero-graphic,
+	.community-hub-hero .page-hero-graphic,
+	.contact-hub-hero .page-hero-graphic,
+	.discord-hub-hero .page-hero-graphic,
+	.donate-hub-hero .page-hero-graphic,
+	.license-hub-hero .page-hero-graphic,
+	.open-hub-hero .page-hero-graphic,
+	.press-hub-hero .page-hero-graphic,
+	.status-hub-hero .page-hero-graphic,
+	.support-hub-hero .page-hero-graphic {
 		filter: brightness(0) saturate(100%) invert(18%) sepia(16%) saturate(842%) hue-rotate(169deg) brightness(92%) contrast(91%);
 	}
 
